add utils to read sleap videos

--- a/examples/keypointMoSeq_demo_local.ipynb
+++ b/examples/keypointMoSeq_demo_local.ipynb
@@ -361,13 +361,21 @@
     "# generate video clips for each syllable\n",
     "kpm.generate_crowd_movies(name=name, project_dir=project_dir, **config())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c8246a08",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "keypoint_moseq",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "keypoint_moseq"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -379,7 +387,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.8.15"
   },
   "varInspector": {
    "cols": {
