test a method to setup hyperparameter sweeps in an .ipynb

--- a/examples/keypointMoSeq_demo_local.ipynb
+++ b/examples/keypointMoSeq_demo_local.ipynb
@@ -417,6 +417,11 @@
     "_Feature"
    ],
    "window_display": false
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "2510fa860a7ab606f1ec140647f18a902515bccfbb1dffb5f02428e4de2891f0"
+   }
   }
  },
  "nbformat": 4,
