--- a/examples/result_visualization_colab.ipynb
+++ b/examples/result_visualization_colab.ipynb
@@ -304,9 +304,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "keypoint_moseq",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "keypoint_moseq"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -318,7 +318,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.8.15"
   },
   "varInspector": {
    "cols": {
